--- a/Deploy/resources/views/Front-End/css/style_Admin2.css
+++ b/Deploy/resources/views/Front-End/css/style_Admin2.css
@@ -137,20 +137,26 @@ td {
   width: 150px;
 }
 
-#sub_table {
+.sub_table {
   border: 1px solid #607D8B;
   margin-top: 0;
+  padding: 3px;
 }
 
-#sub_table td:first-child {
+.sub_table td:first-child {
   width: 300px;
 }
 
-
+.jam_nyala_opt {
+  font-size: 15px;
+  width: 100%;
+  height: 20px;
+  border-radius: 3px;
+}
 
 .selected_row {
   background-color: #d6d6d6;
-  font-style: italic;
+  font-style: none;
 }
 
 .add_user_form_box, .add_cust_form_box {
