--- a/Deploy/resources/views/Front-End/index.html
+++ b/Deploy/resources/views/Front-End/index.html
@@ -5,16 +5,23 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="css/style_home.css">
-  <title>Welcome to ....</title>
+  <title>eStraight PLN</title>
 </head>
 <body>
-  <div class="wrapper">
+  <div class="nav_index">
     <div class="login">
       <form action="" class="login_form">
         <input type="text" name="user_id" id="uid" placeholder="Nomor Pegawai" required="" autofocus=""/>
         <input type="password" name="user_pass" id="upass"placeholder="Password" required=""/>
         <button type="submit" id="login_button">LOGIN</button>
       </form>
+    </div>
+    <img src="img/logo-header.jpg" alt="" id="logo_header">
+  </div>
+  <div class="content">
+    <div class="logo_name">
+      <img src="img/Logo_PLN.png" alt="" id="logo_body">
+      <span>eStraight</span>
     </div>
   </div>
 </body>
