--- a/Deploy/public/css/style_home.css
+++ b/Deploy/public/css/style_home.css
@@ -3,6 +3,7 @@
 
 /*Import font*/
 @import url('https://fonts.googleapis.com/css?family=Montserrat');
+@import url('https://fonts.googleapis.com/css?family=Roboto+Mono:400,700');
 
 /*
 Color Pallete
@@ -15,23 +16,29 @@ Color Pallete
 
 * {
   box-sizing: border-box;
-}
-
-body {
-  width: 100%;
-  height: 100%;
-  background-color: #d6d6d6;
   font-family: 'Montserrat', sans-serif;
 }
 
-.wrapper {
-  clear: right;
-  background: linear-gradient(to left, #14a2ba, #125d72);
-  height: 70px;
-  line-height: 35px;
+html, body {
+  width: 100%;
+  height: 100%;
+  background-color: white;
+}
+
+.nav_index {
   display: flex;
   flex-direction: row;
+}
+
+.login {
+  clear: right;
+  background: linear-gradient(to left, #14a2ba, #125d72);
+  width: calc(100% - 280px);
+  height: 51px;
+  line-height: 35px;
+  display: flex;
   justify-content: flex-end;
+  flex-direction: row;
 }
 
 .login_form {
@@ -43,16 +50,40 @@ body {
 #uid, #upass {
   margin: 18px 5px;
   border: 1px solid #869791;
-  font-family: 'Montserrat', sans-serif;
   font-size: 14px;
-  padding: 0.5em;
+  padding: 0.3em;
   border-radius: 7px;
 }
 #login_button {
   margin: 18px 5px;
-  font-family: 'Montserrat', sans-serif;
   font-size: 14px;
   font-weight: bold;
-  padding: 0.5em;
-  border-radius: 7px;
+  padding: 0.3em;
+  border-radius: 5px;
+}
+
+.content {
+  height: calc(100% - 67px);
+  background-color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.logo_name {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+#logo_body {
+  height: 200px;
+}
+
+
+.content span {
+  font-size: 150px;
+  font-family: 'Roboto Mono', monospace;
+  font-weight: bold;
+  color: darkslategray;
 }
