--- a/Deploy/public/css/style_Workpage.css
+++ b/Deploy/public/css/style_Workpage.css
@@ -13,23 +13,141 @@
 
 .nav {
   background: linear-gradient(to left, #14a2ba, #125d72);
-  height: 70px;
+  height: 50px;
+  display: flex;
+  justify-content: space-between;
 }
 
 .nav li {
   display: inline-block;
-  height: 70px;
-  line-height: 60px;
-  font-size: 20px;
+  height: 50px;
+  line-height: 40px;
+  font-size: 18px;
   color: #efe62f;
   margin-left: 20px;
   border-bottom: 10px solid transparent;
-  padding: 5px;
+  padding: 5px 10px;
   cursor: pointer;
 }
 
 .nav li:hover {
-  border-bottom: 10px solid #efe62f;
+  border-bottom: 7px solid #efe62f;
+}
+
+.user_profile>span {
+  display: inline-block;
+  height: 50px;
+  line-height: 40px;
+  font-size: 18px;
+  color: #efe62f;
+  margin-right: 20px;
+  padding: 5px 10px;
+  cursor: default;
+}
+.user_profile:hover>span {
+  background-color: rgba(0,0,0, .2);
+}
+
+.user_profile:hover>#user_option{
+  display: block;
+}
+/*
+.user_profile > *:not(span) {
+  cursor: auto;
+}
+*/
+
+#user_option {
+  display: none;
+  position: absolute;
+  top: 50px;
+  right: 20px;
+  background-color: white;
+  z-index: 100;
+  color: black;
+  font-size: 16px;
+  border: 1px solid grey;
+  border-top: none;
+  border-radius: 0 0 5px 5px;
+  transition: height 2s;
+  padding: 0 10px 10px 10px;
+}
+
+.user_profile_button {
+  margin-top: 10px;
+  width: 90px;
+  border: 1px solid grey;
+  padding: 5px;
+  cursor: pointer;
+  border-radius: 3px;
+  background-color: white;
+  font-size: 18px;
+}
+.user_profile_button:hover {
+  background-color: lightgrey;
+}
+
+.profile_box {
+  display: none;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, .2);
+  z-index: 999999;
+}
+
+.profile_modal {
+  position: absolute;
+  width: 430px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: white;
+  padding: 15px;
+  border-radius: 5px;
+  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+}
+
+#profile_images {
+  margin: 0 auto;
+  width: 100px;
+  height: 100px;
+  background-color: crimson;
+  border-radius: 50%;
+}
+
+#profile_details {
+  position: relative;
+}
+
+#profile_details span {
+  position: absolute;
+  left: 80px;
+}
+
+#reset_password_button {
+  font-size: 15px;
+}
+
+#reset_password {
+  width: 400px;
+  display: none;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  border: 1px solid grey;
+  padding: 5px;
+}
+
+#reset_password label {
+  font-size: 14px;
+  margin-bottom: 5px;
+}
+#reset_password input {
+  font-size: 14px;
+  width: 200px;
+  margin-bottom: 5px;
 }
 
 .curr_nav {
@@ -58,9 +176,9 @@
 
 .map {
   width: 100%;
-  height: calc(100% - 70px);
+  height: calc(100% - 50px);
   position: absolute;
-  top: 70px;
+  top: 50px;
   left: 0;
   background-color: honeydew;
 }
@@ -78,7 +196,7 @@
 
 .sa {
   position: fixed;
-  top: 120px;
+  top: 100px;
   left: 10px;
   z-index: 2;
 }
@@ -101,6 +219,8 @@
   height: 20em;
   width: 100%;
   overflow-y: scroll;
+  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+
 }
 
 .saItems {
@@ -197,6 +317,7 @@
   background-color: #2196F3;
   border-radius: 5px 5px 5px 0;
   padding: 5px;
+  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 }
 
 #infobox::after {
@@ -216,11 +337,11 @@
 .workspace {
   display: none;
   width: 100%;
-  height: calc(100% - 70px);
+  height: calc(100% - 50px);
   position: absolute;
-  top: 70px;
+  top: 50px;
   left: 0;
-  background-color: rgba(68, 67, 67, .7);
+  background-color: rgba(68, 67, 67, .5);
   z-index: 10;
 }
 
@@ -229,6 +350,7 @@
 }
 .export {
   grid-area: export;
+  padding-bottom: 10px;
 }
 #EXPORT_ {
   font-size: 20px;
@@ -250,6 +372,7 @@
 }
 .minmax {
   grid-area: minmax;
+  padding-bottom: 10px;
 }
 .minmax_box {
   width: 150px;
@@ -261,6 +384,9 @@
 .minmax_box * {
   margin: 0 auto;
 }
+.minmax_box input {
+  margin-bottom: 5px;
+}
 .minmax_box input[type=number] {
   width: 50px;
 }
@@ -270,6 +396,7 @@
 
 .export_turun {
   grid-area: export_turun;
+  padding-bottom: 10px;
 }
 .export_turun input[type=number]{
   width: 50px;
@@ -285,8 +412,47 @@
     -webkit-appearance: none;
     margin: 0;
 }
-.chart {
+.cust_details {
   grid-area: chart;
+  padding: 5px;
+}
+
+.cust_tools {
+  height: 40px;
+}
+
+.cust_table {
+  height: calc(100% - 40px);
+  overflow: scroll;
+  background-color: rgba(255, 255, 255, 0.8);
+  padding: 5px;
+}
+.cust_table thead {
+  background-color: #14a2ba;
+  color: white;
+}
+.cust_table tr {
+  border: 1px solid grey;
+}
+.cust_table td {
+  padding: 3px;
+}
+.cust:hover {
+  background-color: lightgrey;
+}
+
+#cari_cust {
+  font-size: 14px;
+  padding: 3px 10px 3px 30px;
+  line-height: 16px;
+  border-radius: 16px;
+  margin-left: 10px;
+  border: 1px solid lightgrey;
+  width: 200px;
+}
+
+#cari_cust_logo {
+  margin-left: -192px;
 }
 
 
@@ -311,6 +477,7 @@
 
 .wrapper button, .wrapper select, .wrapper input {
   font-size: 16px;
+  border-radius: 3px;
 }
 
 .close {
@@ -331,7 +498,30 @@
 }
 
 .chart {
-  margin: 50px;
-  background-color: white;
-  text-align: center;
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
 }
+
+.chart_box {
+  background-color: white;
+  position: fixed;
+  top: 150px;
+  right: 50px;
+  padding: 5px;
+}
+
+.chart_real {
+  width: 60vw;
+  height: 60vh;
+
+}
+
+/*.chart button {
+  position: absolute;
+  bottom: -30px;
+}
+*/
