--- a/Deploy/public/css/style_Workpage.css
+++ b/Deploy/public/css/style_Workpage.css
@@ -423,7 +423,10 @@
 
 .cust_table {
   height: calc(100% - 40px);
-  overflow: scroll;
+  width: 100%;
+  /*width: 86%;*/
+  /*white-space: nowrap;*/
+  overflow: auto;
   background-color: rgba(255, 255, 255, 0.8);
   padding: 5px;
 }
@@ -518,6 +521,12 @@
   width: 60vw;
   height: 60vh;
 
+}
+
+.table td.fit,
+.table th.fit {
+  white-space: nowrap;
+  width: 1%;
 }
 
 /*.chart button {
