--- a/Deploy/public/css/style_Workpage.css
+++ b/Deploy/public/css/style_Workpage.css
@@ -513,13 +513,15 @@
   left: 0;
   width: 100vw;
   height: 100vh;
+  background-color: rgba(0,0,0,0.8);
 }
 
 .chart_box {
   background-color: white;
   position: fixed;
-  top: 150px;
-  right: 50px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   padding: 5px;
 }
 
